--- a/package.json
+++ b/package.json
@@ -26,13 +26,13 @@
     "@nestjs/config": "^2.1.0",
     "@nestjs/core": "^8.0.0",
     "@nestjs/platform-express": "^8.0.0",
-    "@nestjs/typeorm": "^8.1.2",
+    "@nestjs/typeorm": "^8.0.1",
     "mssql": "^8.1.2",
     "mysql2": "^2.3.3",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
-    "typeorm": "^0.3.6"
+    "typeorm": "0.2.39"
   },
   "devDependencies": {
     "@nestjs/cli": "^8.0.0",
