--- a/package.json
+++ b/package.json
@@ -27,8 +27,10 @@
     "@nestjs/core": "^8.0.0",
     "@nestjs/platform-express": "^8.0.0",
     "@nestjs/typeorm": "^8.0.1",
+    "dayjs": "^1.11.3",
     "mssql": "^8.1.2",
     "mysql2": "^2.3.3",
+    "nestjs-typeorm-paginate": "^4.0.1",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
